2003-08-01  Todd Dukes  <Todd.Dukes@motorola.com>

	*  changes for bigloo 2.6a and swig. bigloo 2.6a is
	   now required for scheme bindings.

2003-04-21  Todd Dukes  <Todd.Dukes@motorola.com>

	*  Made some radix and prefix related changes.

2003-07-14  Brian Kahne  <bkahne@ibmoto.com>

	* Added a new method, RNumber::uint64(), which allows the user to
	get a 64-bit number directly and efficiently from an RNumber.

        ============= rnumber release 1.17.12 (v1_17_12) on SunOS =============

        ============= rnumber release 1.17.12 (v1_17_12) on Linux =============

        ============= rnumber release 1.17.10 (v1_17_10) on Linux =============

        ============== rnumber release 1.17.9 (v1_17_9) on SunOS ==============

        ============== rnumber release 1.17.9 (v1_17_9) on SunOS ==============

        ============== rnumber release 1.17.9 (v1_17_9) on SunOS ==============

        ============== rnumber release 1.17.9 (v1_17_9) on SunOS ==============

        ============== rnumber release 1.17.9 (v1_17_9) on SunOS ==============

2003-05-19  Todd Dukes  <Todd.Dukes@motorola.com>

	* bigloo/tests/driver.scm: fixed bug in argument parsing.

2003-04-21  Todd Dukes  <Todd.Dukes@motorola.com>

	*  Made some radix and prefix related changes.

2003-05-13  Brian Kahne  <bkahne@ibmoto.com>

	* Moved the basic types to a new namespace, rnumber_t, so as not
	to cause namespace pollution.

        ============== rnumber release 1.16.9 (v1_16_9) on SunOS ==============

2003-03-30  Todd Dukes  <tdukes@austin.rr.com>

	*  Fixed GCC_VERSION macro
	*  added commented out perl include path for Redhat 8.0 (swig still doesn't
	   work for this version of Perl, on Redhat 8.0 you have to build with
	   --disable-perl-bindings

2003-03-24  Brian Kahne  <bkahne@ibmoto.com>

	* Modified headers so that they should compile w/o the
	backward-compatibility warning under gcc 3.2.2.

2003-03-18  Brian Kahne  <bkahne@ibmoto.com>
