@@ -3,7 +3,7 @@ AC_INIT(src/RNumber.C)
 
 RNUMBER_MAJOR_VERSION=1
 RNUMBER_MINOR_VERSION=18
-RNUMBER_MICRO_VERSION=12
+RNUMBER_MICRO_VERSION=13
 RNUMBER_INTERFACE_AGE=0
 RNUMBER_BINARY_AGE=0
 RNUMBER_VERSION=$RNUMBER_MAJOR_VERSION.$RNUMBER_MINOR_VERSION.$RNUMBER_MICRO_VERSION
