@@ -1,3 +1,8 @@
+        ============= rnumber release 1.18.1 (v1_18_1) on SunOS =============
+2003-08-05  Todd Dukes  <Todd.Dukes@motorola.com>
+
+	* minor changes to build in SUE environment.
+
 2003-08-01  Todd Dukes  <Todd.Dukes@motorola.com>
 
 	*  changes for bigloo 2.6a and swig. bigloo 2.6a is
